[package]
name = "mysql-audit-extend"
version = "0.1.0"
edition = "2021"
authors = ["seeker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
users = "0.11.0"
rcron = "1.1.3"
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.60"
chrono = "0.4.21"
rust_decimal = "1.25.0"
log = "0.4.14"
simple_logger = "2.1.0"