[package]
name = "mysql-audit-extend"
version = "0.2.4"
edition = "2021"
authors = ["seeker"]
description = "An extension tool of mysql-audit, which provides functions such as log rotation and log cleaning."
license = "MIT"
documentation = "https://docs.rs/crate/mysql-audit-extend/0.2.4"
repository = "https://gitee.com/seeker_rs/mysql-audit-extend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
users = "0.11.0"
rcron = "1.2.1"
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.61"
chrono = "0.4.21"
rust_decimal = "1.25.0"
log = "0.4.14"
simple_logger = "2.1.0"